# progent

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  TODO.md  debug_validators.py  eval_report_simulated.txt  policy_test.json  progent.txt  pyproject.toml  pytest.ini  run_specific_scenarios.py
.github/workflows/: ci.yml
agentdojo/: agentdojo_benchmark.py  debug_policies.py  progent_banking_policies.json  progent_banking_wrapper.py  pyproject.toml  run_real_agentdojo_benchmark.py  test_progent_banking.py
agentdojo/src/agentdojo/: benchmark.py  models.py
datasets/skill_injection/: README.md  hardened_policy.json  manifest.json  taxonomy.json
datasets/skill_injection/payloads/: 01_silent_data_exfiltration.json  02_command_injection_code_blocks.json  03_obfuscated_payloads.json  10_credential_harvesting.json  (+6 more)
examples/: README_GENERATION.md  llm_policy_generation.py  test_generate.py
implementations/: __init__.py  config.yaml  requirements.txt  run_agent.py
implementations/core/: __init__.py  logging_utils.py  progent_enforcer.py  secured_executor.py  tool_definitions.py  tool_registry.py
implementations/evals/: __init__.py  debug_setup.py  debug_setup_granular.py  eval_policies.json  harness.py  run_evals.py  scenarios.py  test_openai_import.py
implementations/frameworks/: ARCHITECTURE.md  __init__.py  adk_agent.py  base_agent.py  claude_sdk_agent.py  langchain_agent.py  raw_sdk_agent.py
implementations/llms/: __init__.py  anthropic_provider.py  azure_provider.py  base_provider.py  bedrock_provider.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  response_types.py  together_provider.py  vllm_provider.py
implementations/sandbox/: .gitkeep
implementations/tests/: __init__.py  test_policy_integration.py  test_tool_definitions.py  test_tool_handlers.py
implementations/tools/: __init__.py  command_tools.py  communication_tools.py  file_tools.py
progent/: __init__.py  analysis.py  cli.py  core.py  exceptions.py  generation.py  logger.py  policy.py  py.typed  registry.py  validation.py  wrapper.py
progent/adapters/: __init__.py  langchain.py  mcp.py
tests/: test_agent_integration.py
tests/test_progent/: __init__.py  test_analysis.py  test_analysis_cli.py  test_cli.py  test_core.py  test_detailed_errors.py  test_exceptions.py  test_generation.py  test_integration.py  test_langchain_adapter.py  test_mcp_adapter.py  test_policy.py  test_policy_smoke.py  test_registry.py  test_skill_injection.py  test_validation.py  test_validation_deep.py  test_wrapper.py
(+112 files in other folders)
