[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "progent"
version = "0.1.0"
description = "Programmable Privilege Control for LLM Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "agent", "security", "llm", "policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
progent = "progent.cli:main"

# Core dependencies - minimal for basic policy enforcement
dependencies = [
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "docstring-parser>=0.15",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.3.0",
]

[project.optional-dependencies]
# Z3-based policy analysis
analysis = [
    "z3-solver>=4.12",
]

# LLM-based policy generation
generation = [
    "openai>=1.0",
    "anthropic>=0.20",
]

# LangChain integration
langchain = [
    "langchain-core>=0.1",
]

# MCP (Model Context Protocol) integration
mcp = [
    "fastmcp>=0.1",
]

# Google ADK (Gemini) integration
adk = [
    "google-genai>=1.61.0",
]

# Claude Agent SDK integration
claude-sdk = [
    "claude-agent-sdk>=0.1.29",
]

# All optional dependencies
all = [
    "progent[analysis,generation,langchain,mcp,adk,claude-sdk]",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/progent/progent"
Documentation = "https://github.com/progent/progent"
Repository = "https://github.com/progent/progent"

[tool.hatch.build.targets.wheel]
packages = ["progent", "secagent"]

[tool.hatch.build.targets.sdist]
include = [
    "/progent",
    "/secagent",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["secagent/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long
